target/debug/build/eyre-17c6f472be0d0f60/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> C:\Users\Alex\Documents\Agenda\target\debug\build\eyre-17c6f472be0d0f60\out\probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
